Update package name
Use .js in name will ambiguous in grunt/gulp task

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-chartist.js",
+  "name": "angular-chartistjs",
   "version": "3.3.9",
   "authors": [
     "will.soto9@gmail.com"
